--- a/src/dashboard_panel.ui
+++ b/src/dashboard_panel.ui
@@ -186,6 +186,9 @@
       </item>
       <item row="1" column="3">
        <widget class="QPushButton" name="frontier_start_button">
+        <property name="enabled">
+         <bool>false</bool>
+        </property>
         <property name="sizePolicy">
          <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
           <horstretch>0</horstretch>
