changed layout, added many buttons. Toggle for in/outdoor and buttons for sampling control. Also changed how the thumbwidget times out.

--- a/src/dashboard_panel.ui
+++ b/src/dashboard_panel.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>428</width>
-    <height>910</height>
+    <width>422</width>
+    <height>1125</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -16,13 +16,13 @@
   <widget class="QWidget" name="verticalLayoutWidget">
    <property name="geometry">
     <rect>
-     <x>0</x>
-     <y>0</y>
-     <width>321</width>
-     <height>891</height>
+     <x>10</x>
+     <y>10</y>
+     <width>367</width>
+     <height>837</height>
     </rect>
    </property>
-   <layout class="QVBoxLayout" name="verticalLayout" stretch="0,0,0,0,0,0,0,0,0,0,0,0,0">
+   <layout class="QVBoxLayout" name="verticalLayout" stretch="0,0,0,0,0,0,0,0,0,0,0,0">
     <property name="sizeConstraint">
      <enum>QLayout::SetDefaultConstraint</enum>
     </property>
@@ -42,17 +42,32 @@
            </font>
           </property>
           <property name="text">
-           <string>CPM</string>
+           <string>CPS</string>
           </property>
          </widget>
         </item>
         <item>
-         <widget class="QLCDNumber" name="cpm_lcd">
+         <widget class="QLCDNumber" name="cps_lcd">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
+          <property name="minimumSize">
+           <size>
+            <width>0</width>
+            <height>20</height>
+           </size>
+          </property>
           <property name="smallDecimalPoint">
            <bool>false</bool>
           </property>
+          <property name="numDigits">
+           <number>6</number>
+          </property>
           <property name="digitCount">
-           <number>5</number>
+           <number>6</number>
           </property>
           <property name="mode">
            <enum>QLCDNumber::Dec</enum>
@@ -95,40 +110,76 @@
      </layout>
     </item>
     <item>
+     <layout class="QHBoxLayout" name="horizontalLayout_4">
+      <item>
+       <widget class="QLabel" name="label_3">
+        <property name="enabled">
+         <bool>true</bool>
+        </property>
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="MinimumExpanding" vsizetype="Preferred">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="text">
+         <string>Indoor / Outdoor toggle</string>
+        </property>
+        <property name="alignment">
+         <set>Qt::AlignCenter</set>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <spacer name="horizontalSpacer_4">
+        <property name="orientation">
+         <enum>Qt::Horizontal</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>40</width>
+          <height>20</height>
+         </size>
+        </property>
+       </spacer>
+      </item>
+      <item>
+       <widget class="SwitchButton" name="in_out_door_button">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
+          <horstretch>1</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="minimumSize">
+         <size>
+          <width>75</width>
+          <height>0</height>
+         </size>
+        </property>
+        <property name="baseSize">
+         <size>
+          <width>100</width>
+          <height>50</height>
+         </size>
+        </property>
+        <property name="text">
+         <string/>
+        </property>
+        <property name="autoDefault">
+         <bool>false</bool>
+        </property>
+        <property name="flat">
+         <bool>false</bool>
+        </property>
+       </widget>
+      </item>
+     </layout>
+    </item>
+    <item>
      <widget class="Line" name="line_3">
       <property name="orientation">
        <enum>Qt::Horizontal</enum>
-      </property>
-     </widget>
-    </item>
-    <item>
-     <widget class="QPushButton" name="in_out_door_button">
-      <property name="sizePolicy">
-       <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
-        <horstretch>1</horstretch>
-        <verstretch>0</verstretch>
-       </sizepolicy>
-      </property>
-      <property name="minimumSize">
-       <size>
-        <width>100</width>
-        <height>60</height>
-       </size>
-      </property>
-      <property name="baseSize">
-       <size>
-        <width>150</width>
-        <height>50</height>
-       </size>
-      </property>
-      <property name="text">
-       <string>Indoor / Outdoor toggle</string>
-      </property>
-      <property name="autoDefault">
-       <bool>false</bool>
-      </property>
-      <property name="flat">
-       <bool>false</bool>
       </property>
      </widget>
     </item>
@@ -156,14 +207,14 @@
          <bool>true</bool>
         </property>
         <property name="sizePolicy">
-         <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+         <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
           <horstretch>1</horstretch>
           <verstretch>0</verstretch>
          </sizepolicy>
         </property>
         <property name="minimumSize">
          <size>
-          <width>100</width>
+          <width>110</width>
           <height>60</height>
          </size>
         </property>
@@ -187,14 +238,14 @@
       <item row="1" column="1">
        <widget class="QPushButton" name="amcl_start_button">
         <property name="sizePolicy">
-         <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
-          <horstretch>0</horstretch>
+         <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
+          <horstretch>1</horstretch>
           <verstretch>0</verstretch>
          </sizepolicy>
         </property>
         <property name="minimumSize">
          <size>
-          <width>100</width>
+          <width>110</width>
           <height>60</height>
          </size>
         </property>
@@ -222,13 +273,13 @@
         </property>
         <property name="sizePolicy">
          <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
-          <horstretch>0</horstretch>
+          <horstretch>1</horstretch>
           <verstretch>0</verstretch>
          </sizepolicy>
         </property>
         <property name="minimumSize">
          <size>
-          <width>128</width>
+          <width>110</width>
           <height>60</height>
          </size>
         </property>
@@ -252,14 +303,14 @@
       <item row="2" column="3">
        <widget class="QPushButton" name="navigation_stop_button">
         <property name="sizePolicy">
-         <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+         <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
           <horstretch>1</horstretch>
           <verstretch>0</verstretch>
          </sizepolicy>
         </property>
         <property name="minimumSize">
          <size>
-          <width>100</width>
+          <width>110</width>
           <height>60</height>
          </size>
         </property>
@@ -291,7 +342,7 @@
         <property name="sizeHint" stdset="0">
          <size>
           <width>40</width>
-          <height>10</height>
+          <height>20</height>
          </size>
         </property>
        </spacer>
@@ -307,7 +358,7 @@
     </item>
     <item>
      <layout class="QGridLayout" name="gridLayout">
-      <item row="3" column="0">
+      <item row="4" column="0">
        <widget class="QPushButton" name="heatmap_reset_button">
         <property name="sizePolicy">
          <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
@@ -317,7 +368,7 @@
         </property>
         <property name="minimumSize">
          <size>
-          <width>100</width>
+          <width>110</width>
           <height>60</height>
          </size>
         </property>
@@ -339,7 +390,7 @@ map</string>
         </property>
        </widget>
       </item>
-      <item row="3" column="2">
+      <item row="4" column="2">
        <widget class="QPushButton" name="sample_reset_button">
         <property name="sizePolicy">
          <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
@@ -349,7 +400,7 @@ map</string>
         </property>
         <property name="minimumSize">
          <size>
-          <width>100</width>
+          <width>110</width>
           <height>60</height>
          </size>
         </property>
@@ -370,10 +421,10 @@ map</string>
         </property>
        </widget>
       </item>
-      <item row="1" column="0">
+      <item row="2" column="0">
        <widget class="QComboBox" name="num_src_combo"/>
       </item>
-      <item row="0" column="1">
+      <item row="1" column="1">
        <spacer name="horizontalSpacer_2">
         <property name="orientation">
          <enum>Qt::Horizontal</enum>
@@ -386,19 +437,13 @@ map</string>
         </property>
        </spacer>
       </item>
-      <item row="0" column="0">
-       <widget class="QPushButton" name="autosample_button">
+      <item row="1" column="0">
+       <widget class="SwitchButton" name="autosample_button">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
           <horstretch>1</horstretch>
           <verstretch>0</verstretch>
          </sizepolicy>
-        </property>
-        <property name="minimumSize">
-         <size>
-          <width>100</width>
-          <height>60</height>
-         </size>
         </property>
         <property name="baseSize">
          <size>
@@ -407,8 +452,7 @@ map</string>
          </size>
         </property>
         <property name="text">
-         <string>Autonomous 
-Sampling toggle</string>
+         <string/>
         </property>
         <property name="autoDefault">
          <bool>false</bool>
@@ -418,20 +462,20 @@ Sampling toggle</string>
         </property>
        </widget>
       </item>
-      <item row="1" column="2">
+      <item row="2" column="2">
        <widget class="QPushButton" name="sourceloc_run_button">
         <property name="enabled">
          <bool>true</bool>
         </property>
         <property name="sizePolicy">
          <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
-          <horstretch>0</horstretch>
+          <horstretch>1</horstretch>
           <verstretch>0</verstretch>
          </sizepolicy>
         </property>
         <property name="minimumSize">
          <size>
-          <width>100</width>
+          <width>110</width>
           <height>60</height>
          </size>
         </property>
@@ -453,8 +497,8 @@ Localization</string>
         </property>
        </widget>
       </item>
-      <item row="2" column="2">
-       <widget class="QPushButton" name="heatmap_reset_button_3">
+      <item row="3" column="2">
+       <widget class="QPushButton" name="measure_backgound_button">
         <property name="sizePolicy">
          <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
           <horstretch>1</horstretch>
@@ -463,7 +507,7 @@ Localization</string>
         </property>
         <property name="minimumSize">
          <size>
-          <width>100</width>
+          <width>110</width>
           <height>60</height>
          </size>
         </property>
@@ -485,19 +529,13 @@ Background</string>
         </property>
        </widget>
       </item>
-      <item row="0" column="2">
-       <widget class="QPushButton" name="heatmap_button">
+      <item row="1" column="2">
+       <widget class="SwitchButton" name="heatmap_button">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
           <horstretch>1</horstretch>
           <verstretch>0</verstretch>
          </sizepolicy>
-        </property>
-        <property name="minimumSize">
-         <size>
-          <width>100</width>
-          <height>60</height>
-         </size>
         </property>
         <property name="baseSize">
          <size>
@@ -506,8 +544,7 @@ Background</string>
          </size>
         </property>
         <property name="text">
-         <string>Intensity
-map toggle</string>
+         <string/>
         </property>
         <property name="autoDefault">
          <bool>false</bool>
@@ -517,7 +554,7 @@ map toggle</string>
         </property>
        </widget>
       </item>
-      <item row="2" column="0">
+      <item row="3" column="0">
        <widget class="QPushButton" name="sample_button">
         <property name="sizePolicy">
          <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
@@ -527,7 +564,7 @@ map toggle</string>
         </property>
         <property name="minimumSize">
          <size>
-          <width>100</width>
+          <width>110</width>
           <height>60</height>
          </size>
         </property>
@@ -549,14 +586,41 @@ Sample</string>
         </property>
        </widget>
       </item>
+      <item row="0" column="0">
+       <widget class="QLabel" name="label_4">
+        <property name="enabled">
+         <bool>true</bool>
+        </property>
+        <property name="text">
+         <string>Autonomous
+Sampling</string>
+        </property>
+        <property name="alignment">
+         <set>Qt::AlignCenter</set>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="2">
+       <widget class="QLabel" name="label_6">
+        <property name="enabled">
+         <bool>true</bool>
+        </property>
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+          <horstretch>1</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="text">
+         <string>Intensity
+map toggle</string>
+        </property>
+        <property name="alignment">
+         <set>Qt::AlignCenter</set>
+        </property>
+       </widget>
+      </item>
      </layout>
-    </item>
-    <item>
-     <widget class="Line" name="line_2">
-      <property name="orientation">
-       <enum>Qt::Horizontal</enum>
-      </property>
-     </widget>
     </item>
     <item>
      <spacer name="verticalSpacer">
@@ -595,20 +659,7 @@ All</string>
        </widget>
       </item>
       <item row="0" column="1">
-       <widget class="QGraphicsView" name="graphicsView">
-        <property name="sizePolicy">
-         <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-          <horstretch>0</horstretch>
-          <verstretch>0</verstretch>
-         </sizepolicy>
-        </property>
-        <property name="minimumSize">
-         <size>
-          <width>175</width>
-          <height>175</height>
-         </size>
-        </property>
-       </widget>
+       <widget class="ThumbWidget" name="tw" native="true"/>
       </item>
      </layout>
     </item>
@@ -688,6 +739,19 @@ All</string>
    </layout>
   </widget>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>ThumbWidget</class>
+   <extends>QWidget</extends>
+   <header location="global">thumb_widget.h</header>
+   <container>1</container>
+  </customwidget>
+  <customwidget>
+   <class>SwitchButton</class>
+   <extends>QPushButton</extends>
+   <header location="global">switchbutton.h</header>
+  </customwidget>
+ </customwidgets>
  <tabstops>
   <tabstop>autosample_button</tabstop>
   <tabstop>save_button</tabstop>
